# trakt

./: .gitignore  .pre-commit-config.yaml  .rustfmt.toml  Cargo.toml  LICENSE  README.md  deny.toml  trakt.apib  trakt.json  trakt.yaml
.github/: codecov.yml
.github/workflows/: pre-commit.yml  rust.yml
src/: main.rs
trakt/: Cargo.toml
trakt-core/: CHANGELOG.md  Cargo.toml
trakt-core/src/: emoji_str.rs  error.rs  lib.rs  request.rs  response.rs  url.rs  utils.rs
trakt-macros/: CHANGELOG.md  Cargo.toml
trakt-macros/src/: lib.rs  paginated.rs  request.rs  response.rs
trakt-macros/tests/: ui.rs
trakt-macros/tests/ui/request/: missing_trakt_attr.rs  missing_trakt_attr.stderr
trakt-rs/: CHANGELOG.md  Cargo.toml
trakt-rs/src/: api.rs  error.rs  lib.rs  request.rs  response.rs  smo.rs  test.rs  url.rs  utils.rs
trakt-rs/src/api/: auth.rs  calendars.rs  certifications.rs  checkin.rs  comments.rs  country.rs  genres.rs  movies.rs  scrobble.rs  search.rs  shows.rs  users.rs
trakt-rs/src/api/users/: follow.rs
trakt-rs/src/smo/: de.rs  ser.rs
trakt/src/: smo.rs  utils.rs
trakt_macros/: Cargo.toml
trakt_macros/src/: lib.rs  paginated.rs  request.rs
