[workspace]
members = ["trakt-core", "trakt-macros", "trakt-rs"]
resolver = "2"

[workspace.dependencies]
bytes = "1.5"
http = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
trakt-core = { path = "trakt-core", version = "0.1.1" }
trakt-macros = { path = "trakt-macros", version = "0.1.2" }
