[workspace]
members = ["trakt-core", "trakt-macros", "trakt-rs"]
resolver = "2"

[workspace.dependencies]
bytes = "1.5"
http = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
time = { version = "0.3", features = ["formatting", "macros", "parsing", "serde"] }
trakt-core = { path = "trakt-core", version = "0.2.2" }
trakt-macros = { path = "trakt-macros", version = "0.1.4" }
