[package]
name = "trakt-rs"
description = "A Rust library for the Trakt.tv API"
authors = ["Anshul Gupta <ansg191@anshulg.com>"]
version = "0.1.1"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/trakt-rs"
repository = "https://github.com/ansg191/trakt"
readme = "../README.md"
keywords = ["trakt", "api", "client"]
categories = ["api-bindings"]

[features]
default = []

[dependencies]
bytes = "1.5"
http = "0.2"
itoa = "1"
percent-encoding = "2.3"
ryu = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
smallstr = { version = "0.3.0", features = ["std", "union", "serde"] }
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
trakt-macros = { workspace = true }

[dev-dependencies]
httpmock = "0.7"
isahc = "1.7"
