[package]
name = "trakt-rs"
description = "A Rust library for the Trakt.tv API"
authors = ["Anshul Gupta <ansg191@anshulg.com>"]
version = "0.1.1"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/trakt-rs"
repository = "https://github.com/ansg191/trakt"
readme = "../README.md"
keywords = ["trakt", "api", "client"]
categories = ["api-bindings"]

[features]
default = []

[dependencies]
bytes = { workspace = true }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
smallstr = { version = "0.3.0", features = ["std", "union", "serde"] }
time = { workspace = true }
trakt-core = { workspace = true }
trakt-macros = { workspace = true }

[dev-dependencies]
httpmock = "0.7"
isahc = "1.7"
