[package]
name = "trakt-rs"
description = "A Rust library for the Trakt.tv API"
authors = ["Anshul Gupta <ansg191@anshulg.com>"]
version = "0.2.1"
edition = "2021"
license = "MIT"
documentation = "https://docs.rs/trakt-rs"
repository = "https://github.com/ansg191/trakt"
readme = "../README.md"
keywords = ["trakt", "api", "client"]
categories = ["api-bindings"]

[features]
default = []

[dependencies]
bitflags = "2.4"
bytes = { workspace = true }
compact_str = { version = "0.7", features = ["serde"] }
http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
time = { workspace = true }
trakt-core = { workspace = true }
trakt-macros = { workspace = true }
unicode-segmentation = "1"

[dev-dependencies]
httpmock = "0.7"
ureq = { version = "2.9", default-features = false, features = ["http-crate"] }
