[package]
name = "trakt"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
bytes = "1.5"
http = "0.2"
itoa = "1"
percent-encoding = "2.3"
ryu = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "1"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
trakt_macros = { path = "../trakt_macros" }
